# lot-genius

./: .dockerignore  .editorconfig  .eslintrc.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  EBAY_PRODUCTION_SETUP.md  EXTERNAL_DATA_SETUP.md  PRODUCTION_REQUIREMENTS.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  bug-summary.md  codex_review_prompt.md  debug_token.py  e2e_test.py  e2e_test_config.json  ebay_debug.html  ebay_token_helper.py  facebook_api_setup.md  final_optimize_result.json  fix_ebay_token.py  fixed_optimize_result.json  generate_app_token.py  generated_report.md  get_fresh_ebay_token.py  index.html  opt_live.json  out_cli_ladder.txt  out_cli_ladder2.txt  out_cli_survival.txt  out_cli_survival2.txt  out_e2e.txt  out_e2e2.txt  out_partial.txt  out_pricefloors.txt  out_pricing.txt  out_sse.txt  out_sse_phase.txt  out_test_step1.txt  (+31 more)
backend/: .env.example  .gitkeep  __init__.py  pyproject.toml  pytest.ini  railway.json  requirements.txt  test_evidence_gate.py
backend/app/: __init__.py  main.py
backend/cli/: calibration_apply.py  calibration_report.py  calibration_run.py  estimate_price.py  estimate_sell.py  import_feed.py  join_bid.py  map_preview.py  optimize_bid.py  parse_clean.py  report_lot.py  resolve_ids.py  stress_scenarios.py  sweep_bid.py  validate_manifest.py
backend/lotgenius/: __init__.py  cache_metrics.py  calibration.py  config.py  evidence.py  feeds.py  gating.py  ge_suite.py  headers.py  ids.py  keepa_client.py  keepa_extract.py  ladder.py  normalize.py  parse.py  pricing.py  resolve.py  roi.py  schema.py  scoring.py  (+3 more)
(+457 files in other folders)
