[project]
name = "lotgenius"
dynamic = ["version"]
description = "Lot Genius backend utilities (schema, header mapping)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "rapidfuzz>=3.9",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "click>=8.1",
  "great-expectations>=0.18",
  "requests>=2.32",
  "fastapi>=0.100",
  "uvicorn[standard]>=0.20",
  "python-multipart>=0.0.9"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lotgenius*", "cli*"]

[tool.setuptools.dynamic]
version = {attr = "lotgenius.__version__"}

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["backend/tests"]
